--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, minimum-scale=1.0"
+    />
     <!-- 구글폰트 start -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -27,7 +30,9 @@
         <div class="hi-blankColor"></div>
         <div class="jm-topNavMenu">
           <div class="hi-topMenuImgLogo">
-            <a href="./index.html"><img src="./img/icon/logo_white.png" alt="온누리 로고"></a>
+            <a href="./index.html"
+              ><img src="./img/icon/logo_white.png" alt="온누리 로고"
+            /></a>
           </div>
           <ul>
             <li>
@@ -36,7 +41,6 @@
             <li><a href="./subpage/summer.html">Summer</a></li>
             <li><a href="./subpage/autumn.html">Autumn</a></li>
             <li><a href="./subpage/winter.html">Winter</a></li>
-            
           </ul>
           <ul>
             <li class="jm-mainMenuBtn"></li>
@@ -134,7 +138,7 @@
           <div id="hi-seasonEnf-e1">
             <!-- 이벤트 및 축제 사진 -->
             <div class="hi-seasonEnf-img">
-              <img src="./img/main/festival_sp.jpg" alt="광양 매화축제 풍경">
+              <img src="./img/main/festival_sp.jpg" alt="광양 매화축제 풍경" />
               <div class="hi-seasonEnf-imgLabel">
                 <a href="./subpage/spring_sub1.html"
                   >같은 시기 축제 찾아보기 &nbsp; &nbsp; >
@@ -148,7 +152,8 @@
               <div class="hi-seasonEnf-term">2024.03.08 - 2024.03.17</div>
               <div class="hi-seasonEnf-ex">
                 포근한 봄, 아름다운 꽃으로 가득한 축제!<br />
-                사랑하는 연인과 함께 어여쁘게 피어난 매화들로 시간을 채워보는 게 어떤가요?
+                사랑하는 연인과 함께 어여쁘게 피어난 매화들로 시간을 채워보는 게
+                어떤가요?
               </div>
             </div>
           </div>
@@ -157,7 +162,10 @@
           <div id="hi-seasonEnf-e2">
             <!-- 이벤트 및 축제 사진 -->
             <div class="hi-seasonEnf-img">
-              <img src="./img/main/festival_su.jpg" alt="평창더위사냥축제 풍경">
+              <img
+                src="./img/main/festival_su.jpg"
+                alt="평창더위사냥축제 풍경"
+              />
               <div class="hi-seasonEnf-imgLabel">
                 <a href="./subpage/summer_sub1.html"
                   >같은 시기 축제 찾아보기 &nbsp; &nbsp; >
@@ -166,12 +174,15 @@
             </div>
             <!-- 이벤트 및 축제 내용 -->
             <div class="hi-seasonEnf-txtB">
-              <div class="hi-seasonEnf-txtTop">Pyeongchang Summer-Hunter Festival</div>
+              <div class="hi-seasonEnf-txtTop">
+                Pyeongchang Summer-Hunter Festival
+              </div>
               <div class="hi-seasonEnf-txtName">평창<br />더위사냥 축제</div>
-              <div class="hi-seasonEnf-term">2024.07.26 - 2024.08.04 </div>
+              <div class="hi-seasonEnf-term">2024.07.26 - 2024.08.04</div>
               <div class="hi-seasonEnf-ex">
                 뜨거운 여름, 시원한 즐거움이 가득한 축제!<br />
-                함께여서 더 즐거운 순간들로 가득한 평창 더위 사냥 축제를 만끽해보세요!
+                함께여서 더 즐거운 순간들로 가득한 평창 더위 사냥 축제를
+                만끽해보세요!
               </div>
             </div>
           </div>
@@ -180,7 +191,10 @@
           <div id="hi-seasonEnf-e3">
             <!-- 이벤트 및 축제 사진 -->
             <div class="hi-seasonEnf-img">
-              <img src="./img/main/festival_au.jpg" alt="서울 세계 불꽃축제 풍경">
+              <img
+                src="./img/main/festival_au.jpg"
+                alt="서울 세계 불꽃축제 풍경"
+              />
               <div class="hi-seasonEnf-imgLabel">
                 <a href="./subpage/autumn_sub1.html"
                   >같은 시기 축제 찾아보기 &nbsp; &nbsp; >
@@ -189,9 +203,13 @@
             </div>
             <!-- 이벤트 및 축제 내용 -->
             <div class="hi-seasonEnf-txtB">
-              <div class="hi-seasonEnf-txtTop">Seoul International Fireworks Festival</div>
+              <div class="hi-seasonEnf-txtTop">
+                Seoul International Fireworks Festival
+              </div>
               <div class="hi-seasonEnf-txtName">서울<br />세계 불꽃축제</div>
-              <div class="hi-seasonEnf-term">[매년 10월 첫째주 토요일] - 2024.10.05</div>
+              <div class="hi-seasonEnf-term">
+                [매년 10월 첫째주 토요일] - 2024.10.05
+              </div>
               <div class="hi-seasonEnf-ex">
                 한강일대에서 열리는 화려한 불꽃축제!<br />
                 풍요로운 가을, 사랑하는 사람들과 아름다운 시간을 만끽하세요!
@@ -203,7 +221,7 @@
           <div id="hi-seasonEnf-e4">
             <!-- 이벤트 및 축제 사진 -->
             <div class="hi-seasonEnf-img">
-              <img src="./img/main/festival_wi.jpg" alt="청평설빙겨울축제">
+              <img src="./img/main/festival_wi.jpg" alt="청평설빙겨울축제" />
               <div class="hi-seasonEnf-imgLabel">
                 <a href="./subpage/winter_sub1.html"
                   >같은 시기 축제 찾아보기 &nbsp; &nbsp; >
@@ -468,28 +486,39 @@
     <section class="hi-mapSection">
       <div class="jb-mapTit">위의 추억 주소를 복사하면 지도가 보입니다.</div>
       <div class="search-container">
-        <input id="address" type="text" placeholder="ex) 전라북도 고창군 아산면 선운사로 250" />
+        <input
+          id="address"
+          type="text"
+          placeholder="ex) 전라북도 고창군 아산면 선운사로 250"
+        />
         <button id="searchButton">검색</button>
       </div>
       <div id="map"></div>
-      </div>
     </section>
 
     <!-- 웹 메뉴 -->
     <section id="hi-mainMenu-web" class="hideMenu">
       <div>
         <div class="hi-menuBoxTop">
-          <div><a href="./index.html"><img src="./img/icon/logo_white.png" alt="온누리 로고"></a></div><span>Menu</span><div id="hi-menuBox-Close"><img src="./img/icon/close.png" alt="close menu"></div>
+          <div>
+            <a href="./index.html"
+              ><img src="./img/icon/logo_white.png" alt="온누리 로고"
+            /></a>
+          </div>
+          <span>Menu</span>
+          <div id="hi-menuBox-Close">
+            <img src="./img/icon/close.png" alt="close menu" />
+          </div>
         </div>
         <div class="hi-menuBox">
           <div class="hi-menuSub">
             <div><a href="./subpage/spring.html">Spring</a></div>
             <div>
-                <ul>
-                    <li><a href="./subpage/spring.html">한국의 봄</a></li>
-                    <li><a href="./subpage/spring_sub1.html">봄날의 즐거움</a></li>
-                    <li><a href="./subpage/spring_sub2.html">갤러리</a></li>
-                </ul>
+              <ul>
+                <li><a href="./subpage/spring.html">한국의 봄</a></li>
+                <li><a href="./subpage/spring_sub1.html">봄날의 즐거움</a></li>
+                <li><a href="./subpage/spring_sub2.html">갤러리</a></li>
+              </ul>
             </div>
           </div>
           <!-- 여름 -->
@@ -497,9 +526,9 @@
             <div><a href="./subpage/summer.html">Summer</a></div>
             <div>
               <ul>
-                  <li><a href="./subpage/summer.html">한국의 여름</a></li>
-                  <li><a href="./subpage/summer_sub1.html">여름의 즐거움</a></li>
-                  <li><a href="./subpage/summer_sub2.html">갤러리</a></li>
+                <li><a href="./subpage/summer.html">한국의 여름</a></li>
+                <li><a href="./subpage/summer_sub1.html">여름의 즐거움</a></li>
+                <li><a href="./subpage/summer_sub2.html">갤러리</a></li>
               </ul>
             </div>
           </div>
@@ -508,9 +537,9 @@
             <div><a href="./subpage/autumn.html">Autumn</a></div>
             <div>
               <ul>
-                  <li><a href="./subpage/autumn.html">한국의 가을</a></li>
-                  <li><a href="./subpage/autumn_sub1.html">가을의 즐거움</a></li>
-                  <li><a href="./subpage/autumn_sub2.html">갤러리</a></li>
+                <li><a href="./subpage/autumn.html">한국의 가을</a></li>
+                <li><a href="./subpage/autumn_sub1.html">가을의 즐거움</a></li>
+                <li><a href="./subpage/autumn_sub2.html">갤러리</a></li>
               </ul>
             </div>
           </div>
@@ -519,9 +548,11 @@
             <div><a href="./subpage/winter.html">Winter</a></div>
             <div>
               <ul>
-                  <li><a href="./subpage/winter.html">한국의 겨울</a></li>
-                  <li><a href="./subpage/winter_sub1.html">겨울날의 즐거움</a></li>
-                  <li><a href="./subpage/winter_sub2.html">갤러리</a></li>
+                <li><a href="./subpage/winter.html">한국의 겨울</a></li>
+                <li>
+                  <a href="./subpage/winter_sub1.html">겨울날의 즐거움</a>
+                </li>
+                <li><a href="./subpage/winter_sub2.html">갤러리</a></li>
               </ul>
             </div>
           </div>
@@ -532,35 +563,43 @@
     <section id="hi-mainMenu-app" class="hideMenu">
       <div class="hi-mainMenu-appBox">
         <div class="hi-mainMenu-appBoxtop">
-          <div><a href="./index.html"><img src="./img/icon/logo_white.png" alt="온누리 로고"></a></div><span>Menu</span><div id="hi-accordionMenu-Close"><img src="./img/icon/close.png" alt="close menu"></div>
+          <div>
+            <a href="./index.html"
+              ><img src="./img/icon/logo_white.png" alt="온누리 로고"
+            /></a>
+          </div>
+          <span>Menu</span>
+          <div id="hi-accordionMenu-Close">
+            <img src="./img/icon/close.png" alt="close menu" />
+          </div>
         </div>
         <!-- 봄 -->
         <div class="hi-accordionMenu">&nbsp;&nbsp;Spring</div>
         <div class="hi-appMenu">
-            <p><a href="./subpage/spring.html">한국의 봄</a></p>
-            <p><a href="./subpage/spring_sub1.html">봄날의 즐거움</a></p>
-            <p><a href="./subpage/spring_sub2.html">갤러리</a></p>
+          <p><a href="./subpage/spring.html">한국의 봄</a></p>
+          <p><a href="./subpage/spring_sub1.html">봄날의 즐거움</a></p>
+          <p><a href="./subpage/spring_sub2.html">갤러리</a></p>
         </div>
         <!-- 여름 -->
         <div class="hi-accordionMenu">&nbsp;&nbsp;Summer</div>
         <div class="hi-appMenu">
-            <p><a href="./subpage/summer.html">한국의 여름</a></p>
-            <p><a href="./subpage/summer_sub1.html">여름의 즐거움</a></p>
-            <p><a href="./subpage/summer_sub2.html">갤러리</a></p>
+          <p><a href="./subpage/summer.html">한국의 여름</a></p>
+          <p><a href="./subpage/summer_sub1.html">여름의 즐거움</a></p>
+          <p><a href="./subpage/summer_sub2.html">갤러리</a></p>
         </div>
         <!-- 가을 -->
         <div class="hi-accordionMenu">&nbsp;&nbsp;Autumn</div>
         <div class="hi-appMenu">
-            <p><a href="./subpage/autumn.html">한국의 가을</a></p>
-            <p><a href="./subpage/autumn_sub1.html">가을의 즐거움</a></p>
-            <p><a href="./subpage/autumn_sub2.html">갤러리</a></p>
+          <p><a href="./subpage/autumn.html">한국의 가을</a></p>
+          <p><a href="./subpage/autumn_sub1.html">가을의 즐거움</a></p>
+          <p><a href="./subpage/autumn_sub2.html">갤러리</a></p>
         </div>
         <!-- 겨울 -->
         <div class="hi-accordionMenu">&nbsp;&nbsp;Winter</div>
         <div class="hi-appMenu">
-            <p><a href="./subpage/spring.html">한국의 겨울</a></p>
-            <p><a href="./subpage/spring.html">겨울날의 즐거움</a></p>
-            <p><a href="./subpage/spring.html">갤러리</a></p>
+          <p><a href="./subpage/spring.html">한국의 겨울</a></p>
+          <p><a href="./subpage/spring.html">겨울날의 즐거움</a></p>
+          <p><a href="./subpage/spring.html">갤러리</a></p>
         </div>
       </div>
     </section>
@@ -570,7 +609,10 @@
       <span>이 페이지는 학습 및 포트폴리오를 위해 제작되었습니다</span>
       <div class="hi-footerBox">
         <div class="hi-figmaBox">
-          <a href="https://www.figma.com/design/599GWSnvNaoEHdQ0H3iW6G/TouristWebsite_Design?node-id=0-1&p=f&t=E0qoQzzdOEmYrA6V-0" target="_blank">
+          <a
+            href="https://www.figma.com/design/599GWSnvNaoEHdQ0H3iW6G/TouristWebsite_Design?node-id=0-1&p=f&t=E0qoQzzdOEmYrA6V-0"
+            target="_blank"
+          >
             <img
               src="./img/icon/linkImg.png"
               alt="피그마 링크"
@@ -581,7 +623,11 @@
         </div>
         <div class="hi-downBox">
           <a href="./img/기획서양식_저기만이기조.pdf" download>
-            <img src="./img/icon/downloadImg.png" alt="기획서 다운로드" class="hi-footerIcon" />
+            <img
+              src="./img/icon/downloadImg.png"
+              alt="기획서 다운로드"
+              class="hi-footerIcon"
+            />
             <span class="hi-footerSubtxt">기획서 다운로드 하기</span>
           </a>
         </div>
