--- a/index.html
+++ b/index.html
@@ -15,9 +15,14 @@
     />
     <!-- 구글폰트 end -->
     <!-- 카카오 api -->
+    <!-- <script
+      type="text/javascript"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=a582ab9bb85bc9a9d3b9874b6dd792f4&libraries=services"
+    ></script> -->
     <script
       type="text/javascript"
       src="//dapi.kakao.com/v2/maps/sdk.js?appkey=a582ab9bb85bc9a9d3b9874b6dd792f4&libraries=services"
+      onload="initializeMap()"
     ></script>
     <title>계절별 한국 관광 홈페이지</title>
     <link rel="stylesheet" href="./style/main.css" />
