--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <title>계절별 한국 관광 홈페이지</title>
     <link rel="stylesheet" href="./style/main.css" />
     <link rel="stylesheet" href="./style/style.css" />
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> -->
   </head>
   <body>
     <header>
@@ -635,5 +635,6 @@
       </div>
     </footer>
     <script src="./js/main.js"></script>
+    <script src="./js/test.js"></script>
   </body>
 </html>
