--- a/index.html
+++ b/index.html
@@ -19,11 +19,10 @@
       type="text/javascript"
       src="//dapi.kakao.com/v2/maps/sdk.js?appkey=a582ab9bb85bc9a9d3b9874b6dd792f4&libraries=services"
     ></script>
-
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <title>계절별 한국 관광 홈페이지</title>
     <link rel="stylesheet" href="./style/main.css" />
     <link rel="stylesheet" href="./style/style.css" />
-    <!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> -->
   </head>
   <body>
     <header>
@@ -635,6 +634,5 @@
       </div>
     </footer>
     <script src="./js/main.js"></script>
-    <script src="./js/test.js"></script>
   </body>
 </html>
