--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
     />
     <!-- 구글폰트 end -->
     <!-- 카카오 api -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script
       type="text/javascript"
       src="//dapi.kakao.com/v2/maps/sdk.js?appkey=a582ab9bb85bc9a9d3b9874b6dd792f4&libraries=services"
     ></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
     <title>계절별 한국 관광 홈페이지</title>
     <link rel="stylesheet" href="./style/main.css" />
     <link rel="stylesheet" href="./style/style.css" />
@@ -634,5 +635,6 @@
       </div>
     </footer>
     <script src="./js/main.js"></script>
+    <script src="./js/kakaoapi.js"></script>
   </body>
 </html>
