--- a/index.html
+++ b/index.html
@@ -52,15 +52,19 @@
             <li class="jm-mainImgFc"></li>
             <li class="jm-mainImg">
               <div class="jm-mainImg-content">Spring</div>
+              <div class="jm-mainImg-content-typing"></div>
             </li>
             <li class="jm-mainImg">
               <div class="jm-mainImg-content">Summer</div>
+              <div class="jm-mainImg-content-typing"></div>
             </li>
             <li class="jm-mainImg">
               <div class="jm-mainImg-content">Autumn</div>
+              <div class="jm-mainImg-content-typing"></div>
             </li>
             <li class="jm-mainImg">
               <div class="jm-mainImg-content">Winter</div>
+              <div class="jm-mainImg-content-typing"></div>
             </li>
           </ul>
         </div>
@@ -73,7 +77,7 @@
     </div>
 
     <!-- 시즌 투어 section -->
-    <section class="hi-section">
+    <section class="hi-section" id="season-ani">
       <!-- 제목 -->
       <div class="hi-subTit">SEASON TOUR</div>
       <!-- 본문 -->
@@ -125,7 +129,7 @@
       </div>
     </section>
     <!-- 계절별 이벤트 및 행사 section -->
-    <section class="hi-section">
+    <section class="hi-section" id="event-festival">
       <!-- 제목 -->
       <div class="hi-subTit">EVENT & FESTIVAL</div>
       <!-- 본문 -->
