--- a/subpage/winter.html
+++ b/subpage/winter.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="../style/season-layout.css" />
     <link rel="stylesheet" href="../style/winter.css" />
   </head>
-  <body class="summer">
+  <body class="winter">
     <header>
       <div class="sp1-nav">
         <div class="sp1-imgLogo">
