--- a/subpage/autumn.html
+++ b/subpage/autumn.html
@@ -93,7 +93,7 @@
       </div>
     </section>
     <section class="sp1-sec4">
-      <div>날씨 따라 완성하는 가을 코디</div>
+      <div>선선한 바람과 함께, 가을 감성 룩</div>
       <ul class="sp1-sec4-card-box">
         <li>
           <ul class="sp1-sec4-card">
