--- a/subpage/summer.html
+++ b/subpage/summer.html
@@ -105,7 +105,7 @@
     <!--   -->
 
     <section class="sp1-sec4" id="su-sp1-sec4">
-      <div class="su-cody">여름에 맞는 코디</div>
+      <div class="su-cody">뜨거운 태양 속, 여름 스타일링</div>
       <ul class="sp1-sec4-card-box">
         <li>
           <ul class="sp1-sec4-card">
