--- a/subpage/winter.html
+++ b/subpage/winter.html
@@ -107,7 +107,7 @@
     <!--   -->
 
     <section class="sp1-sec4" id="su-sp1-sec4">
-      <div class="su-cody">겨울에 맞는 코디</div>
+      <div class="su-cody">포근한 온기 속, 겨울 패션 아이템</div>
       <ul class="sp1-sec4-card-box">
         <li>
           <ul class="sp1-sec4-card">
