--- a/subpage/autumn_sub2.html
+++ b/subpage/autumn_sub2.html
@@ -26,7 +26,7 @@
         <ul class="sp1-navMenu">
           <li><a href="./autumn.html">한국의 가을</a></li>
           <li><a href="./autumn_sub1.html">가을의 즐거움</a></li>
-          <li><a href="./autumn_sub2.html">갤러리</a></li>
+          <li><a href="./summer_sub2.html">갤러리</a></li>
         </ul>
         <div class="sp1-hamBar"></div>
       </div>
