--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
         <input
           id="address"
           type="text"
-          placeholder="ex) 전라북도 고창군 아산면 선운사로 250"
+          placeholder="ex) 추억을 담을 여행지 주소를 입력하세요."
         />
         <button id="searchButton">검색</button>
       </div>
@@ -521,7 +521,7 @@
               <ul>
                 <li><a href="./subpage/spring.html">한국의 봄</a></li>
                 <li><a href="./subpage/spring_sub1.html">봄날의 즐거움</a></li>
-                <li><a href="./subpage/spring_sub2.html">갤러리</a></li>
+                <li><a href="./subpage/summer_sub2.html">갤러리</a></li>
               </ul>
             </div>
           </div>
@@ -543,7 +543,7 @@
               <ul>
                 <li><a href="./subpage/autumn.html">한국의 가을</a></li>
                 <li><a href="./subpage/autumn_sub1.html">가을의 즐거움</a></li>
-                <li><a href="./subpage/autumn_sub2.html">갤러리</a></li>
+                <li><a href="./subpage/summer_sub2.html">갤러리</a></li>
               </ul>
             </div>
           </div>
@@ -556,7 +556,7 @@
                 <li>
                   <a href="./subpage/winter_sub1.html">겨울날의 즐거움</a>
                 </li>
-                <li><a href="./subpage/winter_sub2.html">갤러리</a></li>
+                <li><a href="./subpage/summer_sub2.html">갤러리</a></li>
               </ul>
             </div>
           </div>
@@ -582,7 +582,7 @@
         <div class="hi-appMenu">
           <p><a href="./subpage/spring.html">한국의 봄</a></p>
           <p><a href="./subpage/spring_sub1.html">봄날의 즐거움</a></p>
-          <p><a href="./subpage/spring_sub2.html">갤러리</a></p>
+          <p><a href="./subpage/summer_sub2.html">갤러리</a></p>
         </div>
         <!-- 여름 -->
         <div class="hi-accordionMenu">&nbsp;&nbsp;Summer</div>
@@ -596,14 +596,14 @@
         <div class="hi-appMenu">
           <p><a href="./subpage/autumn.html">한국의 가을</a></p>
           <p><a href="./subpage/autumn_sub1.html">가을의 즐거움</a></p>
-          <p><a href="./subpage/autumn_sub2.html">갤러리</a></p>
+          <p><a href="./subpage/summer_sub2.html">갤러리</a></p>
         </div>
         <!-- 겨울 -->
         <div class="hi-accordionMenu">&nbsp;&nbsp;Winter</div>
         <div class="hi-appMenu">
           <p><a href="./subpage/spring.html">한국의 겨울</a></p>
           <p><a href="./subpage/spring.html">겨울날의 즐거움</a></p>
-          <p><a href="./subpage/spring.html">갤러리</a></p>
+          <p><a href="./subpage/summer_sub2.html">갤러리</a></p>
         </div>
       </div>
     </section>
