--- a/subpage/spring.html
+++ b/subpage/spring.html
@@ -25,7 +25,7 @@
           <li>
             <a class="mb-hidden" href="./spring_sub1.html">봄날의 즐거움</a>
           </li>
-          <li><a class="mb-hidden" href="./spring_sub2.html">갤러리</a></li>
+          <li><a class="mb-hidden" href="./summer_sub2.html">갤러리</a></li>
         </ul>
         <div class="sp1-hamBar"></div>
       </div>
@@ -153,7 +153,7 @@
               <ul>
                 <li><a href="../subpage/spring.html">한국의 봄</a></li>
                 <li><a href="../subpage/spring_sub1.html">봄날의 즐거움</a></li>
-                <li><a href="../subpage/spring_sub2.html">갤러리</a></li>
+                <li><a href="../subpage/summer_sub2.html">갤러리</a></li>
               </ul>
             </div>
           </div>
@@ -175,7 +175,7 @@
               <ul>
                 <li><a href="../subpage/autumn.html">한국의 가을</a></li>
                 <li><a href="../subpage/autumn_sub1.html">가을의 즐거움</a></li>
-                <li><a href="../subpage/autumn_sub2.html">갤러리</a></li>
+                <li><a href="../subpage/summer_sub2.html">갤러리</a></li>
               </ul>
             </div>
           </div>
@@ -188,7 +188,7 @@
                 <li>
                   <a href="../subpage/winter_sub1.html">겨울날의 즐거움</a>
                 </li>
-                <li><a href="../subpage/winter_sub2.html">갤러리</a></li>
+                <li><a href="../subpage/summer_sub2.html">갤러리</a></li>
               </ul>
             </div>
           </div>
@@ -214,7 +214,7 @@
         <div class="hi-appMenu">
           <p><a href="../subpage/spring.html">한국의 봄</a></p>
           <p><a href="../subpage/spring_sub1.html">봄날의 즐거움</a></p>
-          <p><a href="../subpage/spring_sub2.html">갤러리</a></p>
+          <p><a href="../subpage/summer_sub2.html">갤러리</a></p>
         </div>
         <!-- 여름 -->
         <div class="hi-accordionMenu">&nbsp;&nbsp;Summer</div>
@@ -228,14 +228,14 @@
         <div class="hi-appMenu">
           <p><a href="../subpage/autumn.html">한국의 가을</a></p>
           <p><a href="../subpage/autumn_sub1.html">가을의 즐거움</a></p>
-          <p><a href="../subpage/autumn_sub2.html">갤러리</a></p>
+          <p><a href="../subpage/summer_sub2.html">갤러리</a></p>
         </div>
         <!-- 겨울 -->
         <div class="hi-accordionMenu">&nbsp;&nbsp;Winter</div>
         <div class="hi-appMenu">
           <p><a href="../subpage/winter.html">한국의 겨울</a></p>
           <p><a href="../subpage/winter_sub1.html">겨울날의 즐거움</a></p>
-          <p><a href="../subpage/winter_sub2.html">갤러리</a></p>
+          <p><a href="../subpage/summer_sub2.html">갤러리</a></p>
         </div>
       </div>
     </section>
