--- a/subpage/spring_sub2.html
+++ b/subpage/spring_sub2.html
@@ -25,7 +25,7 @@
         <ul class="sp1-navMenu">
           <li><a href="./spring.html">한국의 봄</a></li>
           <li><a href="./spring_sub1.html">봄날의 즐거움</a></li>
-          <li><a href="./spring_sub2.html">갤러리</a></li>
+          <li><a href="./summer_sub2.html">갤러리</a></li>
         </ul>
         <div class="sp1-hamBar"></div>
       </div>
@@ -87,7 +87,7 @@
               <ul>
                 <li><a href="../subpage/spring.html">한국의 봄</a></li>
                 <li><a href="../subpage/spring_sub1.html">봄날의 즐거움</a></li>
-                <li><a href="../subpage/spring_sub2.html">갤러리</a></li>
+                <li><a href="../subpage/summer_sub2.html">갤러리</a></li>
               </ul>
             </div>
           </div>
@@ -109,7 +109,7 @@
               <ul>
                 <li><a href="../subpage/autumn.html">한국의 가을</a></li>
                 <li><a href="../subpage/autumn_sub1.html">가을의 즐거움</a></li>
-                <li><a href="../subpage/autumn_sub2.html">갤러리</a></li>
+                <li><a href="../subpage/summer_sub2.html">갤러리</a></li>
               </ul>
             </div>
           </div>
@@ -122,7 +122,7 @@
                 <li>
                   <a href="../subpage/winter_sub1.html">겨울날의 즐거움</a>
                 </li>
-                <li><a href="../subpage/winter_sub2.html">갤러리</a></li>
+                <li><a href="../subpage/summer_sub2.html">갤러리</a></li>
               </ul>
             </div>
           </div>
@@ -148,7 +148,7 @@
         <div class="hi-appMenu">
           <p><a href="../subpage/spring.html">한국의 봄</a></p>
           <p><a href="../subpage/spring_sub1.html">봄날의 즐거움</a></p>
-          <p><a href="../subpage/spring_sub2.html">갤러리</a></p>
+          <p><a href="../subpage/summer_sub2.html">갤러리</a></p>
         </div>
         <!-- 여름 -->
         <div class="hi-accordionMenu">&nbsp;&nbsp;Summer</div>
@@ -162,14 +162,14 @@
         <div class="hi-appMenu">
           <p><a href="../subpage/autumn.html">한국의 가을</a></p>
           <p><a href="../subpage/autumn_sub1.html">가을의 즐거움</a></p>
-          <p><a href="../subpage/autumn_sub2.html">갤러리</a></p>
+          <p><a href="../subpage/summer_sub2.html">갤러리</a></p>
         </div>
         <!-- 겨울 -->
         <div class="hi-accordionMenu">&nbsp;&nbsp;Winter</div>
         <div class="hi-appMenu">
           <p><a href="../subpage/winter.html">한국의 겨울</a></p>
           <p><a href="../subpage/winter_sub1.html">겨울날의 즐거움</a></p>
-          <p><a href="../subpage/winter_sub2.html">갤러리</a></p>
+          <p><a href="../subpage/summer_sub2.html">갤러리</a></p>
         </div>
       </div>
     </section>
