--- a/subpage/winter_sub1.html
+++ b/subpage/winter_sub1.html
@@ -24,7 +24,7 @@
         <ul class="sp1-navMenu">
           <li><a class="mb-br" href="./winter.html">한국의 겨울</a></li>
           <li><a class="mb-br" href="./winter_sub1.html">겨울의 즐거움</a></li>
-          <li><a class="mb-br" href="./winter_sub2.html">갤러리</a></li>
+          <li><a class="mb-br" href="./summer_sub2.html">갤러리</a></li>
         </ul>
         <div class="sp1-hamBar"></div>
       </div>
@@ -164,7 +164,7 @@
               <ul>
                 <li><a href="../subpage/spring.html">한국의 봄</a></li>
                 <li><a href="../subpage/spring_sub1.html">봄날의 즐거움</a></li>
-                <li><a href="../subpage/spring_sub2.html">갤러리</a></li>
+                <li><a href="../subpage/summer_sub2.html">갤러리</a></li>
               </ul>
             </div>
           </div>
@@ -186,7 +186,7 @@
               <ul>
                 <li><a href="../subpage/autumn.html">한국의 가을</a></li>
                 <li><a href="../subpage/autumn_sub1.html">가을의 즐거움</a></li>
-                <li><a href="../subpage/autumn_sub2.html">갤러리</a></li>
+                <li><a href="../subpage/summer_sub2.html">갤러리</a></li>
               </ul>
             </div>
           </div>
@@ -199,7 +199,7 @@
                 <li>
                   <a href="../subpage/winter_sub1.html">겨울날의 즐거움</a>
                 </li>
-                <li><a href="../subpage/winter_sub2.html">갤러리</a></li>
+                <li><a href="../subpage/summer_sub2.html">갤러리</a></li>
               </ul>
             </div>
           </div>
@@ -225,7 +225,7 @@
         <div class="hi-appMenu">
           <p><a href="../subpage/spring.html">한국의 봄</a></p>
           <p><a href="../subpage/spring_sub1.html">봄날의 즐거움</a></p>
-          <p><a href="../subpage/spring_sub2.html">갤러리</a></p>
+          <p><a href="../subpage/summer_sub2.html">갤러리</a></p>
         </div>
         <!-- 겨울 -->
         <div class="hi-accordionMenu">&nbsp;&nbsp;Summer</div>
@@ -239,14 +239,14 @@
         <div class="hi-appMenu">
           <p><a href="../subpage/autumn.html">한국의 가을</a></p>
           <p><a href="../subpage/autumn_sub1.html">가을의 즐거움</a></p>
-          <p><a href="../subpage/autumn_sub2.html">갤러리</a></p>
+          <p><a href="../subpage/summer_sub2.html">갤러리</a></p>
         </div>
         <!-- 겨울 -->
         <div class="hi-accordionMenu">&nbsp;&nbsp;Winter</div>
         <div class="hi-appMenu">
           <p><a href="../subpage/winter.html">한국의 겨울</a></p>
           <p><a href="../subpage/winter_sub1.html">겨울날의 즐거움</a></p>
-          <p><a href="../subpage/winter_sub2.html">갤러리</a></p>
+          <p><a href="../subpage/summer_sub2.html">갤러리</a></p>
         </div>
       </div>
     </section>
